# recruitpro-codex

./: .env.example  .env.local  .env.production.example  .gitignore  .pdm-python  AI_INTEGRATION_GUIDE.md  AI_INTEGRATION_STATUS.md  CRITICAL-SECURITY-FIXES-SUMMARY.md  DEPLOYMENT.md  FILE_UPLOAD_FLOW.md  FIXES.md  GETTING_STARTED.md  PRODUCTION_READINESS.md  PRODUCTION_READINESS_REPORT.md  PRODUCTION_SETUP.md  PROFESSIONAL-DOCUMENTATION_SUITE.MD  QUICKSTART_LOCAL.md  QUICK_ACCESS.md  README.md  REMAINING_TEMPLATES_GUIDE.md  TROUBLESHOOTING.md  VERIFICATION_REPORT.md  package-lock.json  package.json  pyproject.toml  recruitpro_ats.html  recruitpro_system_v2.5.md  requirements.txt  sample_uiux.html  setup.sh  tailwind.config.js  worker.py
.claude/: settings.local.json
.tickets/: CRITICAL-BUG-FIXES.md  CRITICAL-P0-TICKETS.md
app/: __init__.py  config.py  database.py  deps.py  main.py  middleware.py  monitoring.py  queue.py  tasks.py
app/models/: __init__.py
app/routers/: __init__.py  activity.py  admin.py  ai.py  auth.py  candidates.py  documents.py  interviews.py  projects.py  reporting.py  settings_api.py  sourcing.py  system.py
app/schemas/: __init__.py
app/services/: activity.py  advanced_ai_features.py  ai.py  bootstrap.py  chatbot.py  file_upload.py  gemini.py  integrations.py  migrations.py  queue.py  realtime.py  security.py  smartrecruiters.py
app/utils/: errors.py  permissions.py  secrets.py  security.py  storage.py
desktop/: FEATURE_STATUS.md  package-lock.json  package.json  preload.js
desktop/renderer/: ai_sourcing_overview.html  candidate_profile.html  login.html  project_page.html  project_positions.html  recruitpro_ats.html  settings.html
desktop/renderer/components/: toast.html
desktop/renderer/scripts/: init-backend.js
desktop/scripts/: stage-backend.js
desktop/src/: backendSpawner.js  healthChecker.js  main.js  processMonitor.js  restartManager.js
docs/: AI_PROMPTS_DOCUMENTATION.md  END_USER_MANUAL.md  REQUIREMENTS_MANAGEMENT.md  SYSTEM_ARCHITECTURE.md  SYSTEM_FEATURES.md  TRACEABILITY_MATRIX.md
recruitpro.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sample-ui-images/: r
scripts/: load_test.py  migrate_sqlite_to_postgres.py  rq_worker.py  setup_postgres.sh
static/css/: input.css  output.css
static/js/: api.js  candidate-management.js  store.js  table.js
templates/: ai_sourcing_overview.html  base.html  candidate_profile.html  login.html  project_page.html  project_positions.html  recruitpro_ats.html  settings.html
tests/: conftest.py  test_activity_security.py  test_ai_integrations.py  test_candidate_deletion.py  test_chatbot.py  test_gemini_parsing.py  test_health.py  test_integration_credentials.py  test_projects.py  test_realtime.py  test_settings_api.py  test_smartrecruiters_integration.py  test_sourcing_overview.py
ui_backup_20251115_040540/js/: api.js  utils.js
ui_backup_20251115_040540/templates/: ai_sourcing_overview.html  base.html  login.html  project_page.html  recruitpro_ats.html
ui_backup_20251115_040540/templates/components/: modal.html
