[tool.poetry]
name = "recruitpro"
version = "0.1.0"
description = "RecruitPro ATS and AI platform"
authors = ["RecruitPro Team <dev@recruitpro.local>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = "^3.3.0"
python-multipart = "^0.0.9"
pydantic-settings = "^2.3.0"
email-validator = "^2.1.1"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
httpx = "^0.27.0"
anyio = "^4.3.0"

[build-system]
requires = ["poetry-core>=1.7.0"]
build-backend = "poetry.core.masonry.api"
