[project]
name = "recruitpro"
version = "0.1.0"
description = "RecruitPro ATS and AI platform"
authors = [{ name = "RecruitPro Team", email = "dev@recruitpro.local" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
keywords = ["ats", "fastapi", "recruitment"]
dependencies = [
  "fastapi>=0.111.0,<0.112.0",
  "uvicorn[standard]>=0.30.0,<0.31.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "alembic>=1.13.1,<2.0.0",
  "passlib[bcrypt]>=1.7.4,<2.0.0",
  "python-jose>=3.3.0,<4.0.0",
  "python-multipart>=0.0.9,<0.1.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "email-validator>=2.1.1,<3.0.0",
  "openpyxl>=3.1.2,<4.0.0",
  "jinja2>=3.1.3,<4.0.0",
  "httpx>=0.27.0,<0.28.0",
  "playwright>=1.44.0,<2.0.0",
  "psycopg2-binary>=2.9.9,<3.0.0",
  "redis>=5.0.0,<6.0.0",
  "rq>=1.16.0,<2.0.0",
  "slowapi>=0.1.9,<0.2.0",
  "sentry-sdk[fastapi]>=2.0.0,<3.0.0",
  "prometheus-client>=0.20.0,<0.21.0",
]

[project.urls]
Homepage = "https://github.com/recruitprohq/recruitpro-codex"
Documentation = "https://github.com/recruitprohq/recruitpro-codex"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.1,<9.0.0",
  "httpx>=0.27.0,<0.28.0",
  "anyio>=4.3.0,<5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "error::RuntimeWarning",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
